fix(section): images size on firefox

--- a/src/_includes/styles/components/section.css
+++ b/src/_includes/styles/components/section.css
@@ -51,6 +51,7 @@
     }
 
     .section__image {
+        flex-shrink: 0;
         inline-size: 51%;
         margin: 0;
 
